--- a/HotelIdealG81/src/Vistas/ReservaView.form
+++ b/HotelIdealG81/src/Vistas/ReservaView.form
@@ -434,6 +434,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="ELIMINAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbEliminarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jbReservar">
       <Properties>
