--- a/HotelIdealG81/src/Vistas/TipoHabitación.form
+++ b/HotelIdealG81/src/Vistas/TipoHabitación.form
@@ -171,6 +171,9 @@
           <ComponentRef name="jbModificar"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbCrearActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jbModificar">
       <Properties>
